--- a/src/templates/exportService.hbs
+++ b/src/templates/exportService.hbs
@@ -17,17 +17,7 @@ export type {{{name}}}{{{@root.postfix}}}Options = {
 // eslint-disable-next-line @typescript-eslint/explicit-function-return-type
 export const {{{lowerCase name}}}{{{@root.postfix}}}Factory = ({ baseUrl, httpClient }: {{{name}}}{{{@root.postfix}}}Options) => ({
 	{{#each operations}}
-    {{#if (isEqual name 'getStatus')}} 
-      {{{name}}}: async (timeout?: number): Promise<AxiosResponse<{{>result}}>> => {
-      const url = `${baseUrl}{{{escapePath path}}}`;
-      return httpClient.{{{lowerCase method}}}(url, undefined, timeout);
-		  },
-    {{else if (isEqual name 'orderHomeValuation')}}
-      {{{name}}}: async ({accessToken, {{>deconstruction}} timeout}:{accessToken: string, {{>parameters}} timeout?: number}): Promise<AxiosResponse<{{>result}}>> => {
-      const url = `${baseUrl}{{{escapePath path}}}`;
-      return httpClient.{{{lowerCase method}}}(url, undefined, accessToken, timeout);
-      },
-    {{else if (isEqual name 'createAuthToken')}}
+    {{#if (isEqual name 'createAuthToken')}}
       {{{name}}}: async ({clientId, clientSecret, scopes, actor, subject, email, timeout}:{clientId: string, clientSecret: string, scopes: string, actor?: string, subject?: string, email?: string, timeout?: number}): Promise<AxiosResponse<{{>result}}>> => {
       const url = `${baseUrl}{{{escapePath path}}}`;
 
@@ -50,7 +40,7 @@ export const {{{lowerCase name}}}{{{@root.postfix}}}Factory = ({ baseUrl, httpCl
       return httpClient.{{{lowerCase method}}}(url, params, undefined, timeout, 'application/x-www-form-urlencoded');
       },
     {{else}}
-      {{{name}}}: async ({accessToken, {{>deconstruction}} timeout}:{accessToken: string, {{>parameters}} timeout?: number}): Promise<AxiosResponse<{{>result}}>> => {
+      {{{name}}}: async ({ {{>accessToken}} {{>deconstruction}} timeout}:{ {{>accessTokenParam}} {{>parameters}} timeout?: number}): Promise<AxiosResponse<{{>result}}>> => {
       let url = `${baseUrl}{{{escapePath path}}}`;
       {{#if parametersQuery}}
 
@@ -66,11 +56,11 @@ export const {{{lowerCase name}}}{{{@root.postfix}}}Factory = ({ baseUrl, httpCl
       }
 			{{/if}}
       {{#if (isEqual method 'GET')}} 
-      return httpClient.{{{lowerCase method}}}(url, accessToken, timeout);
+      return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
       {{else if (isEqual method 'DELETE')}}
-      return httpClient.{{{lowerCase method}}}(url, accessToken, timeout);
+      return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
       {{else}}
-      return httpClient.{{{lowerCase method}}}(url, requestBody, accessToken, timeout);
+        return httpClient.{{{lowerCase method}}}(url, {{>requestBodyOrUndefined}} {{>accessTokenOrUndefined}} timeout);
       {{/if}}
       },
     {{/if}}
