--- a/src/templates/exportService.hbs
+++ b/src/templates/exportService.hbs
@@ -17,7 +17,12 @@ export type {{{name}}}{{{@root.postfix}}}Options = {
 // eslint-disable-next-line @typescript-eslint/explicit-function-return-type
 export const {{{lowerCase name}}}{{{@root.postfix}}}Factory = ({ baseUrl, httpClient }: {{{name}}}{{{@root.postfix}}}Options) => ({
 	{{#each operations}}
-    {{#if (isEqual name 'createAuthToken')}}
+    {{#if (isEqual name 'getStatus')}} 
+      {{{name}}}: async (timeout?: number): Promise<AxiosResponse<{{>result}}>> => {
+      const url = `${baseUrl}{{{escapePath path}}}`;
+      return httpClient.{{{lowerCase method}}}(url, undefined, timeout);
+		  },
+    {{else if (isEqual name 'createAuthToken')}}
       {{{name}}}: async ({clientId, clientSecret, scopes, actor, subject, email, timeout}:{clientId: string, clientSecret: string, scopes: string, actor?: string, subject?: string, email?: string, timeout?: number}): Promise<AxiosResponse<{{>result}}>> => {
       const url = `${baseUrl}{{{escapePath path}}}`;
 
@@ -56,9 +61,9 @@ export const {{{lowerCase name}}}{{{@root.postfix}}}Factory = ({ baseUrl, httpCl
       }
 			{{/if}}
       {{#if (isEqual method 'GET')}} 
-      return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
+        return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
       {{else if (isEqual method 'DELETE')}}
-      return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
+        return httpClient.{{{lowerCase method}}}(url, {{>accessTokenOrUndefined}} timeout);
       {{else}}
         return httpClient.{{{lowerCase method}}}(url, {{>requestBodyOrUndefined}} {{>accessTokenOrUndefined}} timeout);
       {{/if}}
