--- a/src/templates/client.hbs
+++ b/src/templates/client.hbs
@@ -1,4 +1,3 @@
-import { constructExternalUrl } from '@hypoport/ampr-homecloud-common';
 import { createContainer } from 'thirty/inject';
 
 {{#each services}}
@@ -31,3 +30,11 @@ export class HomecloudApiService {
     {{/each}}
   }
 }
+
+const constructExternalUrl = (stage: string, name: string): string => {
+  if (stage === 'prod') {
+    return `https://${name}.homecloud.de`;
+  } else {
+    return `https://${stage}.${name}.homecloud.de`;
+  }
+};
