--- a/src/templates/partials/typeArray.hbs
+++ b/src/templates/partials/typeArray.hbs
@@ -1,5 +1,5 @@
 {{~#if link~}}
-{{>type link}}{{>isNullable}}[]
+({{>type link}}{{>isNullable}})[]
 {{~else~}}
 {{>base}}{{>isNullable}}[]
 {{~/if~}}
